small refactor by sonar advices